spacing fix

--- a/themes/meghna-hugo/assets/css/style.css
+++ b/themes/meghna-hugo/assets/css/style.css
@@ -807,7 +807,7 @@ navbar-dark .navbar-nav>.nav-link,
     font-size: 1.1rem;
     /* box-shadow: 4px 4px 0 #b9848d; */
     box-shadow: 4px 4px 0 rgba(191, 88, 90, 0.388);
-    margin-bottom: 30px;
+    margin-bottom: 40px;
   }
   
   .about .container .text-box-container .text-box-2 p{
